gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ory
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /pgweb
        pathType: Prefix
        backend:
          service:
            name: pgweb
            port:
              number: 8081
      - path: /kratos
        pathType: Prefix
        backend:
          service:
            name: kratos-public
            port:
              number: 80
---
# Needs to be a separate ingress without strip-path to prevent redirect loop
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ory-admin
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: kratos-admin
            port:
              number: 80
